[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "stagpy"
version = "0.20.1"
description = "Tool for StagYY output files processing"
readme = "README.md"
authors = [
    {name = "Adrien Morison", email = "adrien.morison@gmail.com"},
    {name = "Martina Ulvrova"},
    {name = "Stéphane Labrosse"},
]
maintainers = [
    {name = "Adrien Morison", email = "adrien.morison@gmail.com"},
]
license = {file = "LICENSE"}
urls = {homepage = "https://github.com/StagPython/StagPy"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "loam~=0.8.0",
    "f90nml>=1.4.4",
    "numpy~=2.1",
    "scipy~=1.14",
    "pandas~=2.2",
    "h5py~=3.12",
    "matplotlib~=3.9",
]

[project.scripts]
stagpy = "stagpy.__main__:main"

[tool.hatch.build.targets.sdist]
include = ["stagpy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "f90nml.*",
    "h5py.*",
    "mpl_toolkits.*",
    "scipy.*",
]
ignore_missing_imports = true

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.2",
    "ruff>=0.6.9",
    "pandas-stubs>=2.2.3.241003",
]
