[metadata]
name = stagpy

description = Tool for StagYY output files processing
long_description = file: README.rst

url = https://github.com/StagPython/StagPy

author = Adrien Morison, Martina Ulvrova, Stéphane Labrosse
author_email = adrien.morison@gmail.com
maintainer = Adrien Morison
maintainer_email = adrien.morison@gmail.com

license = Apache

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.7
include_package_data = true
packages =
    find:
install_requires =
    loam>=0.7.0,<0.8.0
    f90nml>=1.3.1
    setuptools_scm>=6.3.2
    numpy>=1.19
    scipy>=1.5
    pandas>=1.3
    h5py>=3.1
    matplotlib>=3.3

[options.entry_points]
console_scripts = 
    stagpy = stagpy.__main__:main

[options.package_data]
stagpy = py.typed
stagpy._styles = stagpy-*.mplstyle

[options.packages.find]
include = stagpy*
exclude = stagpy_git
